--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -9,13 +9,13 @@
             </div>
 
             <div>
-                <h2><a href="">My first post</a></h2>
-                <p>oh</p>
-            </div>
-
-            <div>
-                <h2><a href="">My second post</a></h2>
-                <p>ho</p>
+                {% for post in posts %}
+                    <div>
+                        <h1><a href="">{{ post.title }}</a></h1>
+                        <p>{{ post.text|linebreaksbr }}</p>
+                        <p>published: {{ post.published_date }}</p>
+                    </div>
+                {% endfor %}
             </div>
         </body>
 </html>
