--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,31 +1,11 @@
-{% load staticfiles %}
-<html>
-        <head>
-            <title>provi's blog</title>
+{% extends 'blog/base.html' %}
 
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-            <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-            <link rel="stylesheet" href="{% static 'css/common.css' %}">
-        </head>
-        <body>
-            <div class="page-header">
-                <h1><a href="/">provi's Blog</a></h1>
-                <p>open : 15.05.2017, 12:00</p>
-            </div>
-
-            <div class="content container">
-                <div class="row">
-                    <div class="col-md-8">
-                        {% for post in posts %}
-                            <div class="post">
-                                <h1><a href="">{{ post.title }}</a></h1>
-                                <p>{{ post.text|linebreaksbr }}</p>
-                                <p>published: {{ post.published_date }}</p>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <h1><a href="{% url 'detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+            <p>published: {{ post.published_date }}</p>
+        </div>
+    {% endfor %}
+{% endblock content %}
