--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -1,10 +1,16 @@
+@import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
+
 h1 a {
     color: #FCA205;
 }
 
 body {
     padding-left: 15px;
-    font-family: 'Lobster';
+    font-family: 'Nanum Gothic Coding';
 }
 
 .page-header {
@@ -24,7 +30,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Nanum Brush Script';
 }
 
 .date {
