--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
         <body>
             <div class="page-header">
                 <h1><a href="/">provi's Blog</a></h1>
-                <p>open : 15.05.2017, 12:00</p>
+                <p><b>DEV history</b></p>
             </div>
 
             <div class="content container">
@@ -20,6 +20,11 @@
                         {% endblock %}
                     </div>
                 </div>
+            </div>
+
+            <div class="page-footer">
+                <h1><a href="mailto:provi.choi@gmail.com">provi.choi@gmail.com</a></h1>
+                <p>© 2017. provi</p>
             </div>
         </body>
 </html>
