--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -9,7 +9,6 @@ h1 a {
 }
 
 body {
-    padding-left: 15px;
     font-family: 'Nanum Gothic Coding';
 }
 
@@ -23,6 +22,17 @@ body {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+}
+
+.page-footer {
+    background-color: #ffffb0;
+    margin-top: 20;
+    padding: 10px 10px 10px 40px;
+}
+
+.page-footer h1, .page-footer h1 a, .page-footer h1 a:visited, .page-footer h1 a:active {
+    color: #FCA205;
+    font-size: 14pt;
 }
 
 .content {
