--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <div class="post">
             <h1><a href="{% url 'detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <!-- <p>{{ post.text|linebreaksbr }}</p> -->
             <p>published: {{ post.published_date }}</p>
         </div>
     {% endfor %}
