--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -8,8 +8,12 @@ h1 a {
     color: #FCA205;
 }
 
+a {
+    text-decoration:none;
+}
+
 body {
-    font-family: 'Nanum Gothic Coding';
+
 }
 
 .page-header {
@@ -22,6 +26,29 @@ body {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+}
+
+.page-header ul{
+    margin-top: 20px;
+    margin-bottom: 5px;
+    padding-left: 0px;
+    list-style:none;
+}
+
+.page-header ul li{
+    display:inline;
+    border-left:1px solid #000000;
+    padding:0 20px;
+    font-family: 'Nanum Brush Script';
+}
+
+.page-header ul li:first-child{
+    border-left:none;
+}
+
+.page-header ul li a{
+    color:#000000;
+    font-size: 20px;
 }
 
 .page-footer {
