메뉴 & 카테고리 적용

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,9 +16,9 @@
                 <p><b>DEV history</b></p>
                 <ul class="menu">
                     <li><a href="/">전체보기</a></li>
-                    <li><a href="">파이썬</a></li>
-                    <li><a href="">자바 + 스프링</a></li>
-                    <li><a href="">자바스크립트</a></li>
+                    <li><a href="{% url 'ctg_list_py' %}">파이썬</a></li>
+                    <li><a href="{% url 'ctg_list_java' %}">자바 + 스프링</a></li>
+                    <li><a href="{% url 'ctg_list_javascript' %}">자바스크립트</a></li>
                 </ul>
             </div>
 
