--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -17,5 +17,9 @@
             <p>published: {{ post.published_date }}</p>
             <a href="{% url 'detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
         </div>
+    {% empty %}
+        <div class="post">
+            <h1>  등록된 글이 없습니다. </h1>
+        </div>
     {% endfor %}
 {% endblock content %}
