--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -27,12 +27,12 @@
                     <!--<a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>-->
                 {% endif %}
             </div>
-            <strong>{{ comment.author }}</strong>
+            <strong>{{ comment.author }} 's comment</strong>
             <p>{{ comment.text|linebreaks }}</p>
         </div>
     {% empty %}
         <div class="comment">
-            <p>No comments here yet :(</p>
+            <p>등록된 댓글이 없습니다.</p>
         </div>
     {% endfor %}
 {% endblock %}
