--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -40,6 +40,7 @@ a {
 
 .page-header ul li:first-child{
     border-left:none;
+    padding-left:0px;
 }
 
 .page-header ul li a{
@@ -59,7 +60,7 @@ a {
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
 h1, h2, h3, h4 {
