--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 {% endif %}
-                <h1><a href="/">provi's Blog</a></h1>
+                <h1><strong><a href="/">provi's Blog</a></strong></h1>
                 <p><b>DEV history</b></p>
                 <ul class="menu">
                     <li><a href="/">전체보기</a></li>
