--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -4,6 +4,8 @@
     <h1>New comment</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Send</button>
+        <div class="comment_button" >
+            <button type="submit" class="save btn btn-default" style="margin-bottom:20px;">Send</button>
+        </div>
     </form>
 {% endblock %}
