--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,7 @@
             </div>
         {% endif %}
         <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <p>{{ post.text|safe|linebreaksbr }}</p>
         {% if user.is_authenticated %}
             <a class="btn btn-default" href="{% url 'edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
@@ -28,7 +28,7 @@
                 {% endif %}
             </div>
             <strong>{{ comment.author }} 's comment</strong>
-            <p>{{ comment.text|linebreaks }}</p>
+            <p>{{ comment.text|safe|linebreaks }}</p>
         </div>
     {% empty %}
         <div class="comment">
