--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,43 +2,61 @@
 
 {% load staticfiles %}
 <html lang="ko">
-        <head>
-            <title>provi's blog</title>
+    <head>
+        <title>provi's blog</title>
 
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-            <link rel="stylesheet" href="{% static 'css/common.css' %}">
-        </head>
-        <body>
-            <div class="page-header">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                {% endif %}
-                <h1><strong><a href="/">provi's Blog</a></strong></h1>
-                <p><b>DEV history</b></p>
-                <ul class="menu">
-                    <li><a href="/">전체보기</a></li>
-                    <li><a href="/category/py">파이썬</a></li>
-                    <li><a href="/category/java">자바 + 스프링</a></li>
-                    <li><a href="/category/javascript">자바스크립트</a></li>
-                </ul>
-            </div>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/common.css' %}">
 
-            <div class="content container">
-                <div class="row">
-                    <div class="col-md-12">
-                        {% block content %}
-                        {% endblock %}
-                    </div>
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+
+    </head>
+    <body>
+        <div class="page-header">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            {% endif %}
+            <h1><strong><a href="/">provi's Blog</a></strong></h1>
+            <p><b>DEV history</b></p>
+            <ul class="menu">
+                <li><a href="/">전체보기</a></li>
+                <li><a href="/category/py">파이썬</a></li>
+                <li><a href="/category/java">자바 + 스프링</a></li>
+                <li><a href="/category/javascript">자바스크립트</a></li>
+                <li><a href="/search">검색</a></li>
+                <li><a href="javascript:alert('아직 없어요 ㅠ_ㅠ');">방명록</a></li>
+            </ul>
+        </div>
+
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-12">
+                    {% block content %}
+                    {% endblock %}
                 </div>
             </div>
+        </div>
 
-            <div class="page-footer">
-                <h1><a href="mailto:provi.choi@gmail.com">provi.choi@gmail.com</a></h1>
-                <p>© 2017. provi</p>
+        <div class="page-footer">
+            <div class="row">
+                <div class="col-md-1">
+                    <a href="javascript:alert('hello?');">
+                        <img src="/static/image/1_test.jpg" />
+                    </a>
+                </div>
+                <div class="col-md-11">
+                    <h1><a href="mailto:provi.choi@gmail.com">provi.choi@gmail.com</a></h1>
+                    <p>© 2017. provi</p>
+                </div>
             </div>
-        </body>
+        </div>
+    </body>
+
+    <script>
+
+    </script>
 </html>
