방명록 업데이트

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,7 +28,7 @@
                 <li><a href="/category/java">자바 + 스프링</a></li>
                 <li><a href="/category/javascript">자바스크립트</a></li>
                 <li><a href="/search">검색</a></li>
-                <li><a href="javascript:alert('아직 없어요 ㅠ_ㅠ');">방명록</a></li>
+                <li><a href="/guest">방명록</a></li>
             </ul>
         </div>
 
