--- a/search/templates/search/result.html
+++ b/search/templates/search/result.html
@@ -18,6 +18,9 @@
                 <h1>  등록된 글이 없습니다. </h1>
             {% endfor %}
         </div>
+        <div class="moreInfo">
+            <h3><a href="{{url}}" target="_blank"> - 더 보기 - </a></h3>
+        </div>
     </div>
 
     <script>
