--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -135,6 +135,14 @@ h4 {
     font-family: 'Nanum Gothic Coding';
 }
 
+.comment p {
+    margin-left: 10px;
+}
+
+.comment .date {
+    margin-right: 10px;
+}
+
 /* search */
 .search {
      margin-bottom: 50px;
@@ -148,3 +156,36 @@ h4 {
 .search .result {
     margin-top: 30px;
 }
+
+.search .result h3 {
+    margin-bottom: 20px;
+}
+
+.search .result p {
+    margin-left: 10px;
+}
+
+.search .moreInfo a {
+    color: #000;
+}
+
+/* guest */
+
+.guestForm {
+    margin-bottom: 30px;
+}
+
+.guestForm p {
+    margin-top: 15px;
+}
+
+.guestForm .id_text {
+    width: 80%;
+    height: 34px;
+    border: solid 1px;
+    border-color: #ccc;
+    margin-left: 10px;
+    margin-right: 30px;
+    vertical-align: middle;
+}
+
