--- a/search/templates/search/default.html
+++ b/search/templates/search/default.html
@@ -4,7 +4,7 @@
 
         <h2>검색페이지 입니다. <small>(@by <a href="http://daum.net" target="_blank">Daum</a>)</small></h2>
         <div class ="search_area">
-            <input type="text" class="search_word" value="{{word}}" placeholder="요기 검색어 입력!"/>
+            <input type="text" class="search_word" value="{{word}}" placeholder="요기 검색어 입력!" onkeypress="if(event.keyCode==13) {goSearch(); return false;}" />
             <button class="search_btn">Go!</button>
         </div>
     </div>
