--- a/blog/templates/blog/guest.html
+++ b/blog/templates/blog/guest.html
@@ -9,17 +9,13 @@
                 <input class="id_text" type="text" name="text" id="id_text" max-length="120" placeholder=" 요기 입력 ! " />
                 <button type="submit" class="btn btn-default">남기기</button>
             </p>
-
-
         </form>
     </div>
 
     {% for note in notes.all %}
         <div class="comment">
             <p>
-                <div class="date">
-                {{ note.created_date }}
-                </div>
+                <div class="date">{{ note.created_date|date:"y-m-d H:m" }}</div>
                 {{ note.text|safe|linebreaks }}
         </p>
         </div>
