--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -49,7 +49,7 @@
                     </a>
                 </div>
                 <div class="col-md-11">
-                    <h1><a href="mailto:provi.choi@gmail.com">provi.choi@gmail.com</a></h1>
+                    <h1><a href="mailto:provi.choi@gmail.com">mailto : provi.choi@gmail.com</a> | <a href="https://www.instagram.com/haeng.bokk/" target="_blank">my pet instagram : @행이복이 </a></h1>
                     <p>© 2017. provi</p>
                 </div>
             </div>
