--- a/search/templates/search/default.html
+++ b/search/templates/search/default.html
@@ -12,7 +12,10 @@
     <script>
         $(document).ready(function(){
             $('.search_btn').click(function(){
+                /*
                 goSearch();
+                */
+                alert('pythonanywhere 결제 후에 이용 가능 ㅠㅠ');
             });
         });
 
