--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -132,6 +132,7 @@ h4 {
     border-top:1px solid #eee;
     margin: 20px 0px 20px 0px;
     padding-top: 10px;
+    padding-bottom: 10px;
     font-family: 'Nanum Gothic Coding';
 }
 
@@ -139,6 +140,8 @@ h4 {
     margin-left: 10px;
     word-break:break-all;
     width: 70%;
+    height: auto;
+    min-height: 20px;
 }
 
 .comment .date {
