--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -69,11 +69,11 @@ h4 {
 .page-footer {
     background-color: #ace;
     margin-top: 20;
-    padding: 10px 10px 10px 40px;
+    padding: 0px 10px 10px 40px;
 }
 
 .page-footer h1, .page-footer h1 a, .page-footer h1 a:visited, .page-footer h1 a:active {
-    padding-top: 10px;
+    padding-top: 5px;
     margin-bottom: 0px;
     color: #fff;
     font-size: 14pt;
@@ -82,6 +82,10 @@ h4 {
 .page-footer img {
     width: 50px;
     margin-top: 20px;
+}
+
+.page-footer p {
+    color: #fff;
 }
 
 /* post */
