--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -48,7 +48,8 @@
                         <img src="/static/image/1_test.jpg" />
                     </a>
                 </div>
-                <div class="col-md-11">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
                     <h1><a href="mailto:provi.choi@gmail.com">mailto : provi.choi@gmail.com</a> | <a href="https://www.instagram.com/haeng.bokk/" target="_blank">my pet instagram : @행이복이 </a></h1>
                     <p>© 2017. provi</p>
                 </div>
