--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/common.css' %}">
+        <link rel="stylesheet" href="{% static 'css/response.css' %}">
 
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
@@ -50,7 +51,7 @@
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
-                    <h1><a href="mailto:provi.choi@gmail.com">mailto : provi.choi@gmail.com</a> | <a href="https://www.instagram.com/haeng.bokk/" target="_blank">my pet instagram : @행이복이 </a></h1>
+                    <h1><a href="mailto:provi.choi@gmail.com">mailto : provi.choi@gmail.com</a> | <a href="https://www.instagram.com/haeng.bokk/" target="_blank">@행이복이 </a></h1>
                     <p>© 2017. provi</p>
                 </div>
             </div>
