--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,7 +4,7 @@
     <div class="post">
         {% if post.published_date %}
             <div class="date">
-                {{ post.published_date }}
+                {{ post.published_date|date:"y-m-d H:m" }}
             </div>
         {% endif %}
         <h1>{{ post.title }}</h1>
