--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,7 +14,7 @@
             {% endif %}
             <h1><a href="{% url 'detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <!-- <p>{{ post.text|linebreaksbr }}</p> -->
-            <p>date : {{ post.published_date }}</p>
+            <p>{{ post.published_date }}</p>
             <a href="{% url 'detail' pk=post.pk %}">댓글 : {{ post.approved_comments.count }}</a>
         </div>
     {% empty %}
