메타 태그 추가

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,6 +8,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="naver-site-verification" content="d7e482442be1ab93d8f333a8c6ce374219fb58be"/>
+        <meta name="description" content="provi's Blog  흔한 개발자의 Log...">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="provi's Blog">
+        <meta property="og:description" content="흔한 개발자의 Log...">
+        <meta property="og:image" content="http://www.provi.xyz/static/image/1_test.jpg">
+        <meta property="og:url" content="http://www.provi.xyz">
 
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
