view 템플릿 수정 date

--- a/blog/templates/blog/guest.html
+++ b/blog/templates/blog/guest.html
@@ -15,7 +15,7 @@
     {% for note in notes.all %}
         <div class="comment">
             <div class="date">
-                {{ note.created_date|date:"y-m-d H:m" }}
+                {{ note.created_date|date:"y-m-d H:i" }}
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'guest_remove' pk=note.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                 {% endif %}
