--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,7 +4,7 @@
     <div class="post">
         {% if post.published_date %}
             <div class="date">
-                {{ post.published_date|date:"y-m-d H:m" }}
+                {{ post.published_date|date:"y-m-d H:i" }}
             </div>
         {% endif %}
         <h1>{{ post.title }}</h1>
@@ -21,7 +21,7 @@
     {% for comment in post.comments.all %}
         <div class="comment">
             <div class="date">
-                {{ comment.created_date|date:"y-m-d H:m" }}
+                {{ comment.created_date|date:"y-m-d H:i" }}
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                     <!--<a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>-->
