서브 메뉴 변경

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,12 +31,11 @@
             <h1><strong><a href="/">provi's Blog</a></strong></h1>
             <p><b>DEV history</b></p>
             <ul class="menu">
-                <li><a href="/">전체보기</a></li>
-                <li><a href="/category/py">파이썬</a></li>
-                <li><a href="/category/java">자바 + 스프링</a></li>
-                <li><a href="/category/javascript">자바스크립트</a></li>
-                <li><a href="/search">검색</a></li>
-                <li><a href="/guest">방명록</a></li>
+                <li><a href="/category/py">Python(+Django)</a></li>
+                <li><a href="/category/java">Java(+Spring)</a></li>
+                <li><a href="/category/javascript">JavaScript</a></li>
+                <li><a href="/search">Search</a></li>
+                <li><a href="/guest">Guest</a></li>
             </ul>
         </div>
 
