--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -21,7 +21,7 @@
     {% for comment in post.comments.all %}
         <div class="comment">
             <div class="date">
-                {{ comment.created_date|date:"y-m-d H:i" }}
+                {{ comment.created_date|date:"y/m/d" }}<br>{{ comment.created_date|date:"H:i" }}
                 {% if user.is_authenticated %}
                     <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                     <!--<a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>-->
