--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,14 +1,18 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post">
+    <div class="post detail">
+        <div class="title">
+            <h1>{{ post.title }}</h1>
+        </div>
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date|date:"y-m-d H:i" }}
             </div>
         {% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|safe|linebreaksbr }}</p>
+        <div class="text">
+            <p>{{ post.text|safe|linebreaksbr }}</p>
+        </div>
         {% if user.is_authenticated %}
             <a class="btn btn-default" href="{% url 'edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
