chat bot update

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,7 +29,7 @@
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
             <h1><strong><a href="/">provi's Blog</a></strong></h1>
-            <p><b>DEV history</b></p>
+            <p><b>DEV history</b> <a href="/fb_chatbot/chat_room">(go chat_beta)</a></p>
             <ul class="menu">
                 <li><a href="/category/py">Python(+Django)</a></li>
                 <li><a href="/category/java">Java(+Spring)</a></li>
