--- a/fb_chat/templates/fb_chat/chat_room.html
+++ b/fb_chat/templates/fb_chat/chat_room.html
@@ -17,7 +17,7 @@
             {% endfor %}
         {% endif %}
         </div>
-        <p id="results" style="margin-bottom:50px;margin-left:10px;"></p>
+        <p id="results" style="margin-bottom:50px;"></p>
     </div>
 
     <script>
