--- a/blog/static/css/response.css
+++ b/blog/static/css/response.css
@@ -17,7 +17,7 @@ p {
 .page-header {
     margin-top: 0;
     margin-bottom: 20px;
-    padding: 20px 40px 20px 40px;
+    padding: 20px 30px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -49,5 +49,8 @@ p {
     margin-right: 0px;
 }
 
+.col-md-12 {
+    padding: 0px 5px;
+}
 
 }
