--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,7 +33,7 @@
             <ul class="menu">
                 <li><a href="/category/py">Python(+Django)</a></li>
                 <li><a href="/category/java">Java(+Spring)</a></li>
-                <li><a href="/category/javascript">JavaScript</a></li>
+                <li><a href="/category/server">Server</a></li>
                 <li><a href="/search">Search</a></li>
                 <li><a href="/guest">Guest</a></li>
             </ul>
