--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -12,6 +12,12 @@
             {% if post.category_id == 3 %}
                 <h4>- javascript -</h4>
             {% endif %}
+            {% if post.category_id == 4 %}
+                <h4>- etc -</h4>
+            {% endif %}
+            {% if post.category_id == 5 %}
+                <h4>- server -</h4>
+            {% endif %}
             <h1><a href="{% url 'detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <!-- <p>{{ post.text|linebreaksbr }}</p> -->
             <p>{{ post.published_date }}</p>
