--- a/blog/templates/blog/include/blog_header.html
+++ b/blog/templates/blog/include/blog_header.html
@@ -3,10 +3,13 @@
             {% endif %}
             <h1><strong><a href="/">provi's Blog</a></strong></h1>
             <p><b>DEV history</b> <a href="/fb_chatbot/chat_room">(go chat_beta)</a></p>
-            <ul class="menu">
-                <li><a href="/category/py">Python(+Django)</a></li>
-                <li><a href="/category/java">Java(+Spring)</a></li>
-                <li><a href="/category/server">Server</a></li>
-                <li><a href="/search">Search</a></li>
-                <li><a href="/guest">Guest</a></li>
-            </ul>
+            <div class="h-menu">
+                <ul class="menu">
+                    <li><a href="/category/py">Python(+Django)</a></li>
+                    <li><a href="/category/java">Java(+Spring)</a></li>
+                    <li><a href="/category/server">Server</a></li>
+                    <li><a href="/category/qa">QA</a></li>
+                    <li><a href="/search">Search</a></li>
+                    <li><a href="/guest">Guest</a></li>
+                </ul>
+            </div>
