--- a/blog/static/css/common.css
+++ b/blog/static/css/common.css
@@ -1,5 +1,6 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
 @import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
 
 /******************** 공통 ********************/
 a {
@@ -47,25 +48,36 @@ code {
     text-decoration: none;
 }
 
-.page-header ul{
+.page-header .h-menu{
+    border-top:1px dashed #000000;
+    border-bottom:1px dashed #000000;
     margin-top: 20px;
+}
+
+.page-header ul{
+    margin-top: 5px;
     margin-bottom: 5px;
     padding-left: 0px;
     list-style:none;
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    overflow: auto;
 }
 
 .page-header ul li{
     display:inline;
-    border-left:1px solid #000000;
-    padding:0 20px;
+    padding:0 10px;
     font-family: 'Nanum Pen Script';
+    margin: 3px 0 3px 0;
 }
 
+/*
 .page-header ul li:first-child{
     border-left:none;
     padding-left:0px;
 }
-
+*/
 .page-header ul li a{
     color:#000000;
     font-size: 20px;
@@ -74,6 +86,7 @@ code {
 .page-footer {
     background-color: #ace;
     padding: 15px 20px 15px 20px;
+    margin-top: 20px;
 }
 
 .page-footer .row {
@@ -144,7 +157,7 @@ nav {
 }
 
 .post p {
-    font-family: 'Nanum Gothic Coding';
+    font-family: 'Nanum Gothic';
     word-break:break-all;
 }
 
@@ -172,7 +185,7 @@ nav {
     margin: 0px 0px 0px 0px;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-family: 'Nanum Gothic Coding';
+    font-family: 'Nanum Gothic';
     height: auto;
 }
 
@@ -189,6 +202,9 @@ nav {
     text-align: right;
 }
 
+.comment .txt {
+    margin-left: 10px;
+}
 /******************** search ********************/
 .search {
      margin-bottom: 50px;
